--- a/AdaptixServer/extenders/beacon_agent/Makefile
+++ b/AdaptixServer/extenders/beacon_agent/Makefile
@@ -10,6 +10,7 @@ all: clean
 	@ mv src_beacon/objects_http ./dist/objects_http
 	@ mv src_beacon/objects_smb ./dist/objects_smb
 	@ mv src_beacon/objects_tcp ./dist/objects_tcp
+	@ mv src_beacon/objects_udp ./dist/objects_udp
 	@ echo "      done..."
 
 clean:
