--- a/AdaptixServer/extenders/beacon_listener_udp/Makefile
+++ b/AdaptixServer/extenders/beacon_listener_udp/Makefile
@@ -1,8 +1,8 @@
 all: clean
-	@ echo "    * Building listener_beacon_udp plugin"
+	@ echo "    * Building listener_gopher_udp plugin"
 	@ mkdir dist
 	@ cp config.json ax_config.axs ./dist/
-	@ GOEXPERIMENT=jsonv2,greenteagc go build -buildmode=plugin -ldflags="-s -w" -o ./dist/listener_beacon_udp.so pl_main.go pl_udp.go pl_listener.go
+	@ GOEXPERIMENT=jsonv2,greenteagc go build -buildmode=plugin -ldflags="-s -w" -o ./dist/listener_gopher_udp.so pl_main.go pl_udp.go pl_listener.go map.go
 	@ echo "      done..."
 
 clean:
