--- a/AdaptixServer/extenders/beacon_listener_udp/config.json
+++ b/AdaptixServer/extenders/beacon_listener_udp/config.json
@@ -1,9 +1,9 @@
 {
   "extender_type": "listener",
-  "extender_file": "listener_beacon_udp.so",
+  "extender_file": "listener_gopher_udp.so",
   "ax_file": "ax_config.axs",
 
-  "listener_name": "BeaconUDP",
-  "listener_type": "internal",
-  "protocol": "bind_udp"
+  "listener_name": "GopherUDP",
+  "listener_type": "external",
+  "protocol": "udp"
 }
