Update: Remove UDP components and add Gopher UDP listener

--- a/AdaptixServer/extenders/gopher_agent/config.json
+++ b/AdaptixServer/extenders/gopher_agent/config.json
@@ -5,5 +5,5 @@
 
   "agent_name": "gopher",
   "agent_watermark": "904e5493",
-  "listeners": ["GopherTCP"]
+  "listeners": ["GopherTCP", "GopherUDP"]
 }
