--- a/AdaptixServer/extenders/gopher_listener_udp/config.json
+++ b/AdaptixServer/extenders/gopher_listener_udp/config.json
@@ -1,9 +1,9 @@
 {
   "extender_type": "listener",
-  "extender_file": "listener_gopher_udp.so",
+  "extender_file": "listener_gopher_quic.so",
   "ax_file": "ax_config.axs",
 
-  "listener_name": "GopherUDP",
+  "listener_name": "GopherQUIC",
   "listener_type": "external",
-  "protocol": "udp"
+  "protocol": "quic"
 }
